samples/_failures_safe/1761312413_f199a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54071ee9.c: In function ‘main’:
./samples/SAFE/__tmp_54071ee9.c:178:9: error: expected declaration or statement at end of input
  178 |         printf("Error: Compression failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_54071ee9.c:178:9: error: expected declaration or statement at end of input
